收银台整合国际化相关文件

--- a/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_en.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_en.properties
@@ -1,6 +1,8 @@
 page.style.lang=en
 payment.confirm.title=Snail Cashier
+payment.company.name=Suzhou Snail Digital Technology Co. Ltd
 
+payment.confirm.msg.order.pay.success=pay success
 payment.confirm.msg.order.success.info=Your order is being placed,please finish the payment process as soon as possible!
 payment.confirm.msg.order.info=Order Detail
 
