--- a/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_zh_CN.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_zh_CN.properties
@@ -1,38 +1,40 @@
 page.style.lang=zh_CN
-payment.confirm.title=\u8717\u725B\u6536\u94F6\u53F0
+payment.company.name=\u82cf\u5dde\u8717\u725b\u6570\u5b57\u79d1\u6280\u80a1\u4efd\u6709\u9650\u516c\u53f8
+payment.confirm.title=\u8717\u725b\u6536\u94f6\u53f0
 
-payment.confirm.msg.order.success.info=\u4E0B\u5355\u6210\u529F\uFF0C\u8BF7\u60A8\u5C3D\u5FEB\u4ED8\u6B3E\uFF01
-payment.confirm.msg.order.info=\u8BA2\u5355\u8BE6\u60C5
+payment.confirm.msg.order.pay.success=\u652f\u4ed8\u6210\u529f
+payment.confirm.msg.order.success.info=\u4e0b\u5355\u6210\u529f\uff0c\u8bf7\u60a8\u5c3d\u5feb\u4ed8\u6b3e\uff01
+payment.confirm.msg.order.info=\u8ba2\u5355\u8be6\u60c5
 
-payment.confirm.lable.amount.pay=\u5E94\u4ED8\u91D1\u989D\uFF1A
-payment.confirm.lable.amount.pay1=\u652F\u4ED8\u91D1\u989D\uFF1A
-payment.confirm.lable.order.amount=\u8BA2\u5355\u91D1\u989D\uFF1A
-payment.confirm.lable.order.no=\u8BA2\u5355\u7F16\u53F7\uFF1A
-payment.confirm.lable.product.name=\u5546\u54C1\u540D\u79F0\uFF1A
-payment.confirm.lable.order.createtime=\u4E0B\u5355\u65F6\u95F4\uFF1A
-payment.confirm.lable.order.amount1=\u8BA2\u5355\u91D1\u989D\uFF1A
+payment.confirm.lable.amount.pay=\u5e94\u4ed8\u91d1\u989d\uff1a
+payment.confirm.lable.amount.pay1=\u652f\u4ed8\u91d1\u989d\uff1a
+payment.confirm.lable.order.amount=\u8ba2\u5355\u91d1\u989d\uff1a
+payment.confirm.lable.order.no=\u8ba2\u5355\u7f16\u53f7\uff1a
+payment.confirm.lable.product.name=\u5546\u54c1\u540d\u79f0\uff1a
+payment.confirm.lable.order.createtime=\u4e0b\u5355\u65f6\u95f4\uff1a
+payment.confirm.lable.order.amount1=\u8ba2\u5355\u91d1\u989d\uff1a
 payment.confirm.lable.order.currency=\u5143
-payment.confirm.lable.order.currency.symbol=¥
+payment.confirm.lable.order.currency.symbol=\ufffd
 
-payment.confirm.lable.bankcard.type=\u94F6\u884C\u5361\u7C7B\u578B\uFF1A
-payment.confirm.lable.bankcard.type.cash.card=\u50A8\u84C4\u5361
-payment.confirm.lable.bankcard.type.credit.card=\u4FE1\u7528\u5361
+payment.confirm.lable.bankcard.type=\u94f6\u884c\u5361\u7c7b\u578b\uff1a
+payment.confirm.lable.bankcard.type.cash.card=\u50a8\u84c4\u5361
+payment.confirm.lable.bankcard.type.credit.card=\u4fe1\u7528\u5361
 
-payment.confirm.lable.pay.type=\u4ED8\u6B3E\u65B9\u5F0F\uFF1A
-payment.confirm.lable.pay.type.net=\u7F51\u94F6\u652F\u4ED8
-payment.confirm.lable.pay.type.quick=\u5FEB\u6377\u652F\u4ED8
+payment.confirm.lable.pay.type=\u4ed8\u6b3e\u65b9\u5f0f\uff1a
+payment.confirm.lable.pay.type.net=\u7f51\u94f6\u652f\u4ed8
+payment.confirm.lable.pay.type.quick=\u5feb\u6377\u652f\u4ed8
 
 
-payment.confirm.tab.pay.bank.card=\u94F6\u884C\u5361\u652F\u4ED8
-payment.confirm.tab.pay.platform=\u5E73\u53F0\u652F\u4ED8
-payment.confirm.tab.pay.credit.card=\u4FE1\u7528\u5361\u5206\u671F
-payment.confirm.tab.pay.ttb=\u5154\u5154\u5E01\u652F\u4ED8
-payment.confirm.tab.pay.top-up.card=\u5145\u503C\u5361\u652F\u4ED8
+payment.confirm.tab.pay.bank.card=\u94f6\u884c\u5361\u652f\u4ed8
+payment.confirm.tab.pay.platform=\u5e73\u53f0\u652f\u4ed8
+payment.confirm.tab.pay.credit.card=\u4fe1\u7528\u5361\u5206\u671f
+payment.confirm.tab.pay.ttb=\u5154\u5154\u5e01\u652f\u4ed8
+payment.confirm.tab.pay.top-up.card=\u5145\u503c\u5361\u652f\u4ed8
 
-payment.confirm.button.pay=\u652F\u4ED8
-payment.confirm.button.colse=\u5173\u95ED
-payment.confirm.panel.more=\u66F4\u591A
+payment.confirm.button.pay=\u652f\u4ed8
+payment.confirm.button.colse=\u5173\u95ed
+payment.confirm.panel.more=\u66f4\u591a
 
-payment.error.page.msg=\u65E0\u6CD5\u5B8C\u6210\u652F\u4ED8\u3002
-payment.error.page.msg.desc=\u70B9\u51FB\u201C\u8FD4\u56DE\u9996\u9875\u201D\u91CD\u65B0\u53D1\u8D77\u652F\u4ED8\uFF0C\u6216\u62E8\u6253\u5BA2\u670D\u70ED\u7EBF\u3002
-payment.error.button.goback=\u8FD4\u56DE\u9996\u9875
+payment.error.page.msg=\u65e0\u6cd5\u5b8c\u6210\u652f\u4ed8\u3002
+payment.error.page.msg.desc=\u70b9\u51fb\u201c\u8fd4\u56de\u9996\u9875\u201d\u91cd\u65b0\u53d1\u8d77\u652f\u4ed8\uff0c\u6216\u62e8\u6253\u5ba2\u670d\u70ed\u7ebf\u3002
+payment.error.button.goback=\u8fd4\u56de\u9996\u9875
