收银台整合spring-cloud、eureka，通过云配置获取数据库连接信息

--- a/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_ja.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_ja.properties
@@ -1,38 +1,40 @@
 page.style.lang=ja
-payment.confirm.title=Snail\u30EC\u30B8
+payment.company.name=\u8607\u5dde\u8717\u725b\u6570\u5b57\u79d1\u6280\u682a\u5f0f\u6709\u9650\u516c\u53f8
+payment.confirm.title=Snail\u30ec\u30b8
 
-payment.confirm.msg.order.success.info=\u5546\u54C1\u3092\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002\u65E9\u3081\u306E\u6C7A\u6E08\u3092\u304A\u9858\u3044\u3057\u307E\u3059\u3002
-payment.confirm.msg.order.info=\u6CE8\u6587\u8A73\u7D30\uFF1A
+payment.confirm.msg.order.pay.success=\u6210\u529f\u3092\u6255\u3046
+payment.confirm.msg.order.success.info=\u5546\u54c1\u3092\u8ffd\u52a0\u3057\u307e\u3057\u305f\u3002\u65e9\u3081\u306e\u6c7a\u6e08\u3092\u304a\u9858\u3044\u3057\u307e\u3059\u3002
+payment.confirm.msg.order.info=\u6ce8\u6587\u8a73\u7d30\uff1a
 
-payment.confirm.lable.amount.pay=\u6CE8\u6587\u91D1\u984D\uFF1A
-payment.confirm.lable.amount.pay1=\u652F\u4ED8\u91D1\u989D\uFF1A
-payment.confirm.lable.order.amount=\u6CE8\u6587\u91D1\u984D\uFF1A
-payment.confirm.lable.order.no=\u6CE8\u6587\u756A\u53F7\uFF1A
-payment.confirm.lable.product.name=\u5546\u54C1\u540D\uFF1A
-payment.confirm.lable.order.createtime=\u6CE8\u6587\u65E5\u6642\uFF1A
-payment.confirm.lable.order.amount1=\u6CE8\u6587\u91D1\u984D\uFF1A
-payment.confirm.lable.order.currency=\u65E5\u5706
-payment.confirm.lable.order.currency.symbol=¥
+payment.confirm.lable.amount.pay=\u6ce8\u6587\u91d1\u984d\uff1a
+payment.confirm.lable.amount.pay1=\u652f\u6255\u3044\u91d1\u984d\uff1a
+payment.confirm.lable.order.amount=\u6ce8\u6587\u91d1\u984d\uff1a
+payment.confirm.lable.order.no=\u6ce8\u6587\u756a\u53f7\uff1a
+payment.confirm.lable.product.name=\u5546\u54c1\u540d\uff1a
+payment.confirm.lable.order.createtime=\u6ce8\u6587\u65e5\u6642\uff1a
+payment.confirm.lable.order.amount1=\u6ce8\u6587\u91d1\u984d\uff1a
+payment.confirm.lable.order.currency=\u65e5\u5706
+payment.confirm.lable.order.currency.symbol=\ufffd
 
-payment.confirm.lable.bankcard.type=\u94F6\u884C\u5361\u7C7B\u578B\uFF1A
-payment.confirm.lable.bankcard.type.cash.card=\u50A8\u84C4\u5361
-payment.confirm.lable.bankcard.type.credit.card=\u4FE1\u7528\u5361
+payment.confirm.lable.bankcard.type=\u94f6\u884c\u5361\u7c7b\u578b\uff1a
+payment.confirm.lable.bankcard.type.cash.card=\u50a8\u84c4\u5361
+payment.confirm.lable.bankcard.type.credit.card=\u4fe1\u7528\u5361
 
-payment.confirm.lable.pay.type=\u4ED8\u6B3E\u65B9\u5F0F\uFF1A
-payment.confirm.lable.pay.type.net=\u7F51\u94F6\u652F\u4ED8
-payment.confirm.lable.pay.type.quick=\u5FEB\u6377\u652F\u4ED8
+payment.confirm.lable.pay.type=\u4ed8\u6b3e\u65b9\u5f0f\uff1a
+payment.confirm.lable.pay.type.net=\u7f51\u94f6\u652f\u4ed8
+payment.confirm.lable.pay.type.quick=\u5feb\u6377\u652f\u4ed8
 
 
-payment.confirm.tab.pay.bank.card=\u94F6\u884C\u5361\u652F\u4ED8
-payment.confirm.tab.pay.platform=\u305D\u306E\u4ED6
-payment.confirm.tab.pay.credit.card=\u4FE1\u7528\u5361\u5206\u671F
-payment.confirm.tab.pay.ttb=\u5154\u5154\u5E01\u652F\u4ED8
-payment.confirm.tab.pay.top-up.card=\u5145\u503C\u5361\u652F\u4ED8
+payment.confirm.tab.pay.bank.card=\u9280\u884c\u30ab\u30fc\u30c9\u652f\u6255\u3044
+payment.confirm.tab.pay.platform=\u305d\u306e\u4ed6
+payment.confirm.tab.pay.credit.card=\u4fe1\u7528\u5361\u5206\u671f
+payment.confirm.tab.pay.ttb=\u5154\u5154\u5e01\u652f\u4ed8
+payment.confirm.tab.pay.top-up.card=\u5145\u503c\u5361\u652f\u4ed8
 
-payment.confirm.button.pay=\u6C7A\u6E08\u3059\u308B
-payment.confirm.button.colse=\u5173\u95ED
-payment.confirm.panel.more=\u66F4\u591A
+payment.confirm.button.pay=\u6c7a\u6e08\u3059\u308b
+payment.confirm.button.colse=\u9589\u9396
+payment.confirm.panel.more=\u3082\u3063\u3068
 
-payment.error.page.msg=\u6C7A\u6E08\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
-payment.error.page.msg.desc=\u30C8\u30C3\u30D7\u30DA\u30FC\u30B8\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u518D\u5EA6\u8CFC\u5165\u3057\u306A\u3055\u3044\u3001\u307E\u305F\u30A2\u30D5\u30BF\u30FC\u30B5\u30FC\u30D3\u30B9\u3078\u9023\u7D61\u3057\u306A\u3055\u3044\u3002
-payment.error.button.goback=\u30C8\u30C3\u30D7\u30DA\u30FC\u30B8\u3078\u623B\u308B
+payment.error.page.msg=\u6c7a\u6e08\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+payment.error.page.msg.desc=\u30c8\u30c3\u30d7\u30da\u30fc\u30b8\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u518d\u5ea6\u8cfc\u5165\u3057\u306a\u3055\u3044\u3001\u307e\u305f\u30a2\u30d5\u30bf\u30fc\u30b5\u30fc\u30d3\u30b9\u3078\u9023\u7d61\u3057\u306a\u3055\u3044\u3002
+payment.error.button.goback=\u30c8\u30c3\u30d7\u30da\u30fc\u30b8\u3078\u623b\u308b
