--- a/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_ko.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_ko.properties
@@ -1,38 +1,40 @@
-page.style.lang=en
-payment.confirm.title=\uC2A4\uB124\uC77C \uACC4\uC0B0\uB300
+page.style.lang=ko
+payment.company.name=\uc464 \uc800\uc6b0 \ub2ec\ud33d\uc774 \ub514\uc9c0\ud138 \uacfc\ud559 \uae30\uc220 \uc9c0\uc8fc \ud68c\uc0ac
+payment.confirm.title=\uc2a4\ub124\uc77c \uacc4\uc0b0\ub300
 
-payment.confirm.msg.order.success.info=\uC8FC\uBB38\uC774 \uCC98\uB9AC\uB418\uC5C8\uC2B5\uB2C8\uB2E4! \uBE60\uB978 \uC2DC\uC77C\uB0B4 \uC9C0\uBD88\uD558\uC2DC\uAE30 \uBC14\uB78D\uB2C8\uB2E4.
-payment.confirm.msg.order.info=\uC0C1\uC138\uC815\uBCF4
+payment.confirm.msg.order.pay.success=\uc9c0\ubd88\uc774
+payment.confirm.msg.order.success.info=\uc8fc\ubb38\uc774 \ucc98\ub9ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4! \ube60\ub978 \uc2dc\uc77c\ub0b4 \uc9c0\ubd88\ud558\uc2dc\uae30 \ubc14\ub78d\ub2c8\ub2e4.
+payment.confirm.msg.order.info=\uc0c1\uc138\uc815\ubcf4
 
-payment.confirm.lable.amount.pay=\uBBF8\uC9C0\uAE09\uAE08:
-payment.confirm.lable.amount.pay1=\u652F\u4ED8\u91D1\u989D\uFF1A
-payment.confirm.lable.order.amount=\uC8FC\uBB38 \uAE08\uC561:
-payment.confirm.lable.order.no=\uC8FC\uBB38 \uBC88\uD638:
-payment.confirm.lable.product.name=\uC0C1\uD488\uBA85\uCE6D:
-payment.confirm.lable.order.createtime=\uC8FC\uBB38\uC2DC\uAC04:
-payment.confirm.lable.order.amount1=\uC8FC\uBB38 \uAE08\uC561:
+payment.confirm.lable.amount.pay=\ubbf8\uc9c0\uae09\uae08:
+payment.confirm.lable.amount.pay1=\uc9c0\ubd88 \uae08\uc561\uff1a
+payment.confirm.lable.order.amount=\uc8fc\ubb38 \uae08\uc561:
+payment.confirm.lable.order.no=\uc8fc\ubb38 \ubc88\ud638:
+payment.confirm.lable.product.name=\uc0c1\ud488\uba85\uce6d:
+payment.confirm.lable.order.createtime=\uc8fc\ubb38\uc2dc\uac04:
+payment.confirm.lable.order.amount1=\uc8fc\ubb38 \uae08\uc561:
 payment.confirm.lable.order.currency=KRW
-payment.confirm.lable.order.currency.symbol=\u20A9
+payment.confirm.lable.order.currency.symbol=\u20a9
 
-payment.confirm.lable.bankcard.type=\u94F6\u884C\u5361\u7C7B\u578B\uFF1A
-payment.confirm.lable.bankcard.type.cash.card=\u50A8\u84C4\u5361
-payment.confirm.lable.bankcard.type.credit.card=\u4FE1\u7528\u5361
+payment.confirm.lable.bankcard.type=\u94f6\u884c\u5361\u7c7b\u578b\uff1a
+payment.confirm.lable.bankcard.type.cash.card=\u50a8\u84c4\u5361
+payment.confirm.lable.bankcard.type.credit.card=\u4fe1\u7528\u5361
 
-payment.confirm.lable.pay.type=\u4ED8\u6B3E\u65B9\u5F0F\uFF1A
-payment.confirm.lable.pay.type.net=\u7F51\u94F6\u652F\u4ED8
-payment.confirm.lable.pay.type.quick=\u5FEB\u6377\u652F\u4ED8
+payment.confirm.lable.pay.type=\u4ed8\u6b3e\u65b9\u5f0f\uff1a
+payment.confirm.lable.pay.type.net=\u7f51\u94f6\u652f\u4ed8
+payment.confirm.lable.pay.type.quick=\u5feb\u6377\u652f\u4ed8
 
 
-payment.confirm.tab.pay.bank.card=\u94F6\u884C\u5361\u652F\u4ED8
-payment.confirm.tab.pay.platform=\uD50C\uB7AB\uD3FC\uC73C\uB85C \uC9C0\uBD88\uD558\uAE30
-payment.confirm.tab.pay.credit.card=\u4FE1\u7528\u5361\u5206\u671F
-payment.confirm.tab.pay.ttb=\u5154\u5154\u5E01\u652F\u4ED8
-payment.confirm.tab.pay.top-up.card=\u5145\u503C\u5361\u652F\u4ED8
+payment.confirm.tab.pay.bank.card=\u94f6\u884c\u5361\u652f\u4ed8
+payment.confirm.tab.pay.platform=\ud50c\ub7ab\ud3fc\uc73c\ub85c \uc9c0\ubd88\ud558\uae30
+payment.confirm.tab.pay.credit.card=\u4fe1\u7528\u5361\u5206\u671f
+payment.confirm.tab.pay.ttb=\u5154\u5154\u5e01\u652f\u4ed8
+payment.confirm.tab.pay.top-up.card=\u5145\u503c\u5361\u652f\u4ed8
 
-payment.confirm.button.pay=\uC9C0\uBD88\uD558\uAE30
-payment.confirm.button.colse=\uB2EB\uAE30
-payment.confirm.panel.more=\u66F4\u591A
+payment.confirm.button.pay=\uc9c0\ubd88\ud558\uae30
+payment.confirm.button.colse=\ub2eb\uae30
+payment.confirm.panel.more=\ub354
 
-payment.error.page.msg=\uACB0\uC81C \uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
-payment.error.page.msg.desc=\uB2E4\uC2DC \uC2DC\uB3C4\uD558\uAC70\uB098 \uC11C\uBE44\uC2A4 \uC13C\uD130\uC5D0 \uC5F0\uB77D\uD574\uC8FC\uC138\uC694
-payment.error.button.goback=\uB3CC\uC544\uAC00\uAE30
+payment.error.page.msg=\uacb0\uc81c \ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4
+payment.error.page.msg.desc=\ub2e4\uc2dc \uc2dc\ub3c4\ud558\uac70\ub098 \uc11c\ube44\uc2a4 \uc13c\ud130\uc5d0 \uc5f0\ub77d\ud574\uc8fc\uc138\uc694
+payment.error.button.goback=\ub3cc\uc544\uac00\uae30
