--- a/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_ru.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_ru.properties
@@ -1,38 +1,40 @@
 page.style.lang=ru
-payment.confirm.title=\u041A\u0430\u0441\u0441\u0430 Snail
+payment.company.name=\u0441\u0443\u0447\u0436\u043e\u0443 \u0443\u043b\u0438\u0442\u043a\u0430 \u0446\u0438\u0444\u0440\u043e\u0432\u043e\u0439 Technology Co., Ltd.
+payment.confirm.title=\u041a\u0430\u0441\u0441\u0430 Snail
 
-payment.confirm.msg.order.success.info=\u0412\u0430\u0448 \u0437\u0430\u043A\u0430\u0437 \u043F\u0440\u0438\u043D\u044F\u0442, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u0440\u043E\u0438\u0437\u0432\u0435\u0434\u0438\u0442\u0435 \u043E\u043F\u043B\u0430\u0442\u0443 \u0447\u0442\u043E\u0431\u044B \u0437\u0430\u043A\u043E\u043D\u0447\u0438\u0442\u044C \u0441\u0434\u0435\u043B\u043A\u0443. 
-payment.confirm.msg.order.info=\u041F\u043E\u0434\u0440\u043E\u0431\u043D\u043E\u0441\u0442\u0438
+payment.confirm.msg.order.pay.success=\u0437\u0430 \u0443\u0441\u043f\u0435\u0445
+payment.confirm.msg.order.success.info=\u0412\u0430\u0448 \u0437\u0430\u043a\u0430\u0437 \u043f\u0440\u0438\u043d\u044f\u0442, \u043f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430, \u043f\u0440\u043e\u0438\u0437\u0432\u0435\u0434\u0438\u0442\u0435 \u043e\u043f\u043b\u0430\u0442\u0443 \u0447\u0442\u043e\u0431\u044b \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u0442\u044c \u0441\u0434\u0435\u043b\u043a\u0443. 
+payment.confirm.msg.order.info=\u041f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0438
 
-payment.confirm.lable.amount.pay=\u041E\u0431\u0449\u0430\u044F \u0441\u0443\u043C\u043C\u0430
-payment.confirm.lable.amount.pay1=\u652F\u4ED8\u91D1\u989D\uFF1A
-payment.confirm.lable.order.amount=\u041E\u0431\u0449\u0438\u0439 \u0437\u0430\u043A\u0430\u0437:
-payment.confirm.lable.order.no=\u041D\u043E\u043C\u0435\u0440 \u0437\u0430\u043A\u0430\u0437\u0430:
-payment.confirm.lable.product.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043F\u0440\u0435\u0434\u043C\u0435\u0442\u0430:
-payment.confirm.lable.order.createtime=\u0414\u0430\u0442\u0430 \u0437\u0430\u043A\u0430\u0437\u0430:
-payment.confirm.lable.order.amount1=\u041E\u0431\u0449\u0438\u0439 \u0437\u0430\u043A\u0430\u0437:
+payment.confirm.lable.amount.pay=\u041e\u0431\u0449\u0430\u044f \u0441\u0443\u043c\u043c\u0430
+payment.confirm.lable.amount.pay1=\u0441\u0443\u043c\u043c\u0430 \u043f\u043b\u0430\u0442\u0435\u0436\u0430\uff1a
+payment.confirm.lable.order.amount=\u041e\u0431\u0449\u0438\u0439 \u0437\u0430\u043a\u0430\u0437:
+payment.confirm.lable.order.no=\u041d\u043e\u043c\u0435\u0440 \u0437\u0430\u043a\u0430\u0437\u0430:
+payment.confirm.lable.product.name=\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u043f\u0440\u0435\u0434\u043c\u0435\u0442\u0430:
+payment.confirm.lable.order.createtime=\u0414\u0430\u0442\u0430 \u0437\u0430\u043a\u0430\u0437\u0430:
+payment.confirm.lable.order.amount1=\u041e\u0431\u0449\u0438\u0439 \u0437\u0430\u043a\u0430\u0437:
 payment.confirm.lable.order.currency=RUB
 payment.confirm.lable.order.currency.symbol=RUB
 
-payment.confirm.lable.bankcard.type=\u94F6\u884C\u5361\u7C7B\u578B\uFF1A
-payment.confirm.lable.bankcard.type.cash.card=\u50A8\u84C4\u5361
-payment.confirm.lable.bankcard.type.credit.card=\u4FE1\u7528\u5361
+payment.confirm.lable.bankcard.type=\u94f6\u884c\u5361\u7c7b\u578b\uff1a
+payment.confirm.lable.bankcard.type.cash.card=\u50a8\u84c4\u5361
+payment.confirm.lable.bankcard.type.credit.card=\u4fe1\u7528\u5361
 
-payment.confirm.lable.pay.type=\u4ED8\u6B3E\u65B9\u5F0F\uFF1A
-payment.confirm.lable.pay.type.net=\u7F51\u94F6\u652F\u4ED8
-payment.confirm.lable.pay.type.quick=\u5FEB\u6377\u652F\u4ED8
+payment.confirm.lable.pay.type=\u4ed8\u6b3e\u65b9\u5f0f\uff1a
+payment.confirm.lable.pay.type.net=\u7f51\u94f6\u652f\u4ed8
+payment.confirm.lable.pay.type.quick=\u5feb\u6377\u652f\u4ed8
 
 
-payment.confirm.tab.pay.bank.card=\u94F6\u884C\u5361\u652F\u4ED8
-payment.confirm.tab.pay.platform=\u041E\u043F\u043B\u0430\u0442\u0430 \u0447\u0435\u0440\u0435\u0437 \u0442\u0440\u0435\u0442\u044C\u0438 \u0441\u0442\u043E\u0440\u043E\u043D\u044B
-payment.confirm.tab.pay.credit.card=\u4FE1\u7528\u5361\u5206\u671F
-payment.confirm.tab.pay.ttb=\u5154\u5154\u5E01\u652F\u4ED8
-payment.confirm.tab.pay.top-up.card=\u5145\u503C\u5361\u652F\u4ED8
+payment.confirm.tab.pay.bank.card=\u94f6\u884c\u5361\u652f\u4ed8
+payment.confirm.tab.pay.platform=\u041e\u043f\u043b\u0430\u0442\u0430 \u0447\u0435\u0440\u0435\u0437 \u0442\u0440\u0435\u0442\u044c\u0438 \u0441\u0442\u043e\u0440\u043e\u043d\u044b
+payment.confirm.tab.pay.credit.card=\u4fe1\u7528\u5361\u5206\u671f
+payment.confirm.tab.pay.ttb=\u5154\u5154\u5e01\u652f\u4ed8
+payment.confirm.tab.pay.top-up.card=\u5145\u503c\u5361\u652f\u4ed8
 
-payment.confirm.button.pay=\u041E\u043F\u043B\u0430\u0442\u0430
-payment.confirm.button.colse=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
-payment.confirm.panel.more=\u66F4\u591A
+payment.confirm.button.pay=\u041e\u043f\u043b\u0430\u0442\u0430
+payment.confirm.button.colse=\u0417\u0430\u043a\u0440\u044b\u0442\u044c
+payment.confirm.panel.more=\u0431\u043e\u043b\u044c\u0448\u0435
 
-payment.error.page.msg=\u041F\u043B\u0430\u0442\u0435\u0436 \u043D\u0435 \u0431\u044B\u043B \u0441\u043E\u0432\u0435\u0440\u0448\u0451\u043D
-payment.error.page.msg.desc=\u041D\u0430\u0436\u043C\u0438\u0442\u0435 "\u041D\u0430\u0437\u0430\u0434 \u043D\u0430 \u0433\u043B\u0430\u0432\u043D\u0443\u044E" \u0438 \u043F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u044D\u0442\u0443 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u044E, \u0438\u043B\u0438 \u0441\u0432\u044F\u0436\u0438\u0442\u0435\u0441\u044C \u0441 \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u043E\u0439 \u043E\u043D\u043B\u0430\u0439\u043D
-payment.error.button.goback=\u041D\u0430\u0437\u0430\u0434 \u043D\u0430 \u0433\u043B\u0430\u0432\u043D\u0443\u044E
+payment.error.page.msg=\u041f\u043b\u0430\u0442\u0435\u0436 \u043d\u0435 \u0431\u044b\u043b \u0441\u043e\u0432\u0435\u0440\u0448\u0451\u043d
+payment.error.page.msg.desc=\u041d\u0430\u0436\u043c\u0438\u0442\u0435 "\u041d\u0430\u0437\u0430\u0434 \u043d\u0430 \u0433\u043b\u0430\u0432\u043d\u0443\u044e" \u0438 \u043f\u043e\u0432\u0442\u043e\u0440\u0438\u0442\u0435 \u044d\u0442\u0443 \u043e\u043f\u0435\u0440\u0430\u0446\u0438\u044e, \u0438\u043b\u0438 \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u043f\u043e\u0434\u0434\u0435\u0440\u0436\u043a\u043e\u0439 \u043e\u043d\u043b\u0430\u0439\u043d
+payment.error.button.goback=\u041d\u0430\u0437\u0430\u0434 \u043d\u0430 \u0433\u043b\u0430\u0432\u043d\u0443\u044e
