Bluepay   codapay   东南亚 UI修改

--- a/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_en.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/message/i18n/messages_en.properties
@@ -3,7 +3,7 @@ payment.confirm.title=Snail Cashier
 payment.company.name=Suzhou Snail Digital Technology Co. Ltd
 
 payment.confirm.msg.order.pay.success=pay success
-payment.confirm.msg.order.success.info=Your order is being placed,please finish the payment process as soon as possible!
+payment.confirm.msg.order.success.info=Your order is being placed, please finish the payment process as soon as possible!
 payment.confirm.msg.order.info=Order Detail
 
 payment.confirm.lable.amount.pay=Total Amount:
@@ -26,7 +26,7 @@ payment.confirm.lable.pay.type.quick=quick pay
 
 
 payment.confirm.tab.pay.bank.card=bank card pay
-payment.confirm.tab.pay.platform=Third-party payment platform
+payment.confirm.tab.pay.platform=Choose Payment
 payment.confirm.tab.pay.credit.card=credit card pay
 payment.confirm.tab.pay.ttb=tutubi pay
 payment.confirm.tab.pay.top-up.card=top-up card pay
